Changes in the main menu: absolute positioning, remove float, fixed overlap, etc.

--- a/style.css
+++ b/style.css
@@ -8,19 +8,36 @@ html, body {
   background-size: cover;
 }
 
-nav {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background-color: #030927;
+header {
+  display: block;
+  text-align: center;
+  color: blue;
+  position:fixed;
+  width:100%;
 }
 
-ul {
+nav {
+  margin-bottom: 10px;
+  background: rgba(0, 0, 255, 0.2);
+}
+
+nav ul {
   list-style-type: none;
   margin-left: 100px;
   text-align: left;
 }
 
-li {
+ul {
+  list-style-type: none;
+}
+
+.menu {
+  list-style-type: none;
+  margin-left: 100px;
+  text-align: left;
+}
+
+.menu > li {
   display:inline-block;
   margin-left: 10px;
   background-color: #3E8FB9;
@@ -31,7 +48,7 @@ li {
   padding: 5px;
 }
 
-li:hover {
+.menu li:hover {
   background-color: #808080;
 }
 
@@ -52,10 +69,6 @@ h2 {
   background-color: green;
 }
 
-.home .left {
-  width:  48%;
-}
-
 .right {
   display: block;
   width: 20%;
@@ -63,6 +76,7 @@ h2 {
   background-color: LightSalmon;
   overflow-y: scroll;
   height: 70vh;
+  padding:10px;
 }
 
 .right2 {
@@ -72,17 +86,31 @@ h2 {
   background-color: LightSalmon;
   overflow-y: scroll;
   height: 70vh;
-}
-
-.home .right {
-  width:  48%;
-  margin: 40px;
+  padding:10px;
 }
 
 .main {
   display: block;
   margin-left: 20%;
   margin-right: 20%;
+}
+
+img {
+  height: 75vh;
+  height: 500px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*Home page*/
+
+.village{
+  margin-top:100px;
+}
+
+.home .left{
+  width:40%;
 }
 
 .story{
@@ -102,18 +130,7 @@ h2 {
   font-weight: bold;
 }
 
-header {
-  display: block;
-  text-align: center;
-  background:white;
-  color: blue;
-  height: 3%;  
-}
-
-img {
-  height: 75vh;
-  height: 500px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.home .right {
+  width:  40%;
+  margin: 100px;
 }
